--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,9 @@ env:
 jobs:
     test:
         env:
-            MONGODB_CLUSTER_ADDRESS: cluster0.2yyh4.mongodb.net
-            MONGODB_USERNAME: darren-user
-            MONGODB_PASSWORD: jpmpNIJHLvEA0UVu
+            MONGODB_CLUSTER_ADDRESS: ${{ secrets.MONGODB_CLUSTER_ADDRESS  }}
+            MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME   }}
+            MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD  }}
             PORT: 8080
         environment: testing
         runs-on: ubuntu-latest
